--- a/src/components/CountryPicker/CountryPicker.module.css
+++ b/src/components/CountryPicker/CountryPicker.module.css
@@ -1,3 +1,10 @@
+.container {
+    /* border: 1px solid red; */
+
+    display: flex;
+    justify-content: center;
+}
+
 .formControl {
     width: 30%;
     margin-bottom: 30px !important;
